--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://openlayers.org/en/v4.6.5/css/ol.css" type="text/css">
     <link rel="stylesheet" href="popup.css">
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL"></script>
-    <script src="jquery_3.5.0.js"></script>
+    <script src='jquery_3.5.0.js'></script>
     <script src="https://openlayers.org/en/v4.6.5/build/ol-debug.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/exif-js/2.2.1/exif.min.js"></script>
     <script src='toitsu.js' type='text/javascript'></script>
