--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         outline: #4A74A8 solid 0.15em;
       }
       #map{
+            position:absolute; top:100px; left:100px;
             width: 980px;
             height: 500px;
         }
