--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset='utf-8' />
-    <title>Tokyo Map</title>
+    <title>GIS</title>
     <link rel="stylesheet" href="https://openlayers.org/en/v4.6.5/css/ol.css" type="text/css">
     <link rel="stylesheet" href="popup.css">
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL"></script>
@@ -13,6 +13,7 @@
     <script src='toitsu.js' type='text/javascript'></script>
     <script src='sample1.js' type='text/javascript'></script>
     <script src='sample2.js' type='text/javascript'></script>
+    <script src='file_control.js' type='text/javascript'></script>
     <style>
         a.skiplink {
         position: absolute;
@@ -33,12 +34,11 @@
       #map:focus {
         outline: #4A74A8 solid 0.15em;
       }
-        /*
-        #map{
-            width: 1400px;
-            height: 650px;
+      #map{
+            position:absolute; top:100px; left:100px;
+            width: 100vw;
+            height: 100vh;
         }
-        */
     </style>
 </head>
 
@@ -50,7 +50,9 @@
     </div>
     <input type='button' id='osm' value='OSM'>
     <input type='button' id='tiri' value='tiri'>
+    <!--
     <input type='button' id='poly' value='polygon'>
+-->
     <div id="DropFrame"
     style="background-color:#b8deff;
     border:solid 1px #3470ff;
