--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         outline: #4A74A8 solid 0.15em;
       }
       #map{
-            position:absolute; top:100px; left:100px;
-            width: 100vw;
-            height: 100vh;
+            position:absolute;
+            width: 100%;
+            height: 100%;
         }
     </style>
 </head>
