--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
         outline: #4A74A8 solid 0.15em;
       }
       #map{
-            position:absolute;
-            width: 100%;
-            height: 100%;
+            width: 500px;
+            height: 500px;
         }
     </style>
 </head>
